--- a/src/components/modules/administracion/AdministracionMain.css
+++ b/src/components/modules/administracion/AdministracionMain.css
@@ -3,7 +3,7 @@
 /* Container */
 .administracion-main {
   margin: auto;
-  margin-top: 20vh;
+  /* margin-top: 20vh; */
   max-width: 1200px;
 
   padding: 0 1rem;
@@ -88,6 +88,9 @@
 }
 
 .admin-card-icon {
+  width: 70px;
+  margin: auto;
+  fill: #394bd3;
   font-size: clamp(2.4rem, 6vw, 3.5rem);
   margin-bottom: 1rem;
   transition: transform 0.3s ease;
