--- a/src/components/modules/administracion/submodules/gastos-administrativos/GastosAdminMain.css
+++ b/src/components/modules/administracion/submodules/gastos-administrativos/GastosAdminMain.css
@@ -92,6 +92,8 @@
 }
 
 .gastos-card-icon {
+  width: 60px;
+  fill: #394bd3;
   font-size: clamp(2.4rem, 6vw, 3.5rem);
   margin-bottom: 1rem;
   transition: transform 0.3s ease;
