--- a/src/components/modules/operaciones/OperacionesMain.css
+++ b/src/components/modules/operaciones/OperacionesMain.css
@@ -86,9 +86,11 @@
 }
 
 .operaciones-card-icon {
+  width: 60px;
   font-size: clamp(2.4rem, 6vw, 3.5rem);
   margin-bottom: 1rem;
   transition: transform 0.3s ease;
+  fill: #394bd3;
 }
 
 .operaciones-main-card:hover .operaciones-card-icon {
