--- a/src/components/layout/AppHeader/NotificationPanel.css
+++ b/src/components/layout/AppHeader/NotificationPanel.css
@@ -4,6 +4,7 @@
   right: 20px;
   width: 300px;
   background-color: white;
+  color:#000;
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
